--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<ul>
 				<li>
 					<img 
-					src="/image/music_festival.jpg" 
+					src="image/music_festival.jpg" 
 					alt="More than just a music festival "
 					width="300px"/>
 					<div class="music_festival">
@@ -41,7 +41,7 @@
 				</li>
 				<li>
 					<img 
-					src="/image/american_dream.jpg" 
+					src="image/american_dream.jpg" 
 					alt="American Dream"
 					width="300px"
 />
@@ -53,7 +53,7 @@
 				</li>
 				<li>
 					<img 
-					src="/image/song_for_running.jpg" 
+					src="image/song_for_running.jpg" 
 					alt="Song For Sunning"
 					width="300px"
 />
@@ -65,7 +65,7 @@
 				</li>
 				<li>
 					<img 
-					src="/image/best_with_coffe.jpg" 
+					src="image/best_with_coffe.jpg" 
 					alt="Life tastes better with coffee"
 					width="300px"
 />
@@ -77,7 +77,7 @@
 				</li>
 				<li>
 					<img 
-					src="/image/exploring_the_alps.jpg" 
+					src="image/exploring_the_alps.jpg" 
 					alt="A day exploring the Alps"
 					width="300px"
 />
@@ -89,7 +89,7 @@
 				</li>
 				<li>
 					<img 
-					src="/image/cold_winter_days.jpg" 
+					src="image/cold_winter_days.jpg" 
 					alt="Cold winter days"
 					width="300px"
 />
