--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 </head>
 <body>
 	<header>
+		<a href="./">
+			<img 
+					src="https://img.icons8.com/officel/40/stack-of-photos.png" 
+					alt="Logo Photoblog" 
+					width="40" 
+			/>
+			<br/>
+					Photoblog.dev
+	</a>
 		<nav>
 			<ul>
 				<li>
@@ -24,6 +33,7 @@
 			</ul>
 		</nav>
 	</header>
+	
 	<main>
 		<section>
 			<h2>Photoblog</h2>
