--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="CSS/style.css">
 	<title>Photoblog</title>
 </head>
 <body>
-	<header>
-		<a href="./">
+	<header class="header">
+		<a class="header-link" href="./">
 			<img 
+					class="header-link-img"
 					src="https://img.icons8.com/officel/40/stack-of-photos.png" 
 					alt="Logo Photoblog" 
 					width="40" 
@@ -16,10 +18,10 @@
 			<br/>
 					Photoblog.dev
 	</a>
-		<nav>
-			<ul>
-				<li>
-					<a href="./">LIFESTYLE</a>
+		<nav class="header-nav">
+			<ul class="header-nav-list">
+				<li class="header-nav-list-item">
+					<a class="header-nav-list-item-link" href="./">LIFESTYLE</a>
 				</li>
 				<li>
 					<a href="./">PHOTODIARY</a>
@@ -35,18 +37,19 @@
 	</header>
 	
 	<main>
-		<section>
-			<h2>Photoblog</h2>
-			<ul>
-				<li>
+		<section class="section-galary">
+			<h2 class="gallery-title">Photoblog</h2>
+			<ul class="gallary-list">
+				<li class="gallary-item">
 					<img 
+					class="gallery-image"
 					src="image/music_festival.jpg" 
 					alt="More than just a music festival "
 					width="300px"/>
 					<div class="music_festival">
-						<a href="./">LIFESTYLE</a>
-						<h3>More than just a music festival</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+						<a class="gallery-link" href="./">LIFESTYLE</a>
+						<h3 class="gallery-list-title">More than just a music festival</h3>
+						<p class="gallary-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
 					</div>
 				</li>
 				<li>
