--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="CSS/style.css">
 	<title>Photoblog</title>
 </head>
@@ -23,14 +26,14 @@
 				<li class="header-nav-list-item">
 					<a class="header-nav-list-item-link" href="./">LIFESTYLE</a>
 				</li>
-				<li>
-					<a href="./">PHOTODIARY</a>
+				<li class="header-nav-list-item">
+					<a class="header-nav-list-item-link" href="./">PHOTODIARY</a>
 				</li>
-				<li>
-					<a href="./">MUSIC</a>
+				<li class="header-nav-list-item">
+					<a class="header-nav-list-item-link" href="./">MUSIC</a>
 				</li>
-				<li>
-					<a href="./">TRAVEL</a>
+				<li class="header-nav-list-item">
+					<a class="header-nav-list-item-link" href="./">TRAVEL</a>
 				</li>
 			</ul>
 		</nav>
@@ -39,8 +42,8 @@
 	<main>
 		<section class="section-galary">
 			<h2 class="gallery-title">Photoblog</h2>
-			<ul class="gallary-list">
-				<li class="gallary-item">
+			<ul class="gallery-list">
+				<li class="gallery-item">
 					<img 
 					class="gallery-image"
 					src="image/music_festival.jpg" 
@@ -49,7 +52,7 @@
 					<div class="music_festival">
 						<a class="gallery-link" href="./">LIFESTYLE</a>
 						<h3 class="gallery-list-title">More than just a music festival</h3>
-						<p class="gallary-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+						<p class="gallery-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
 					</div>
 				</li>
 				<li>
@@ -59,7 +62,7 @@
 					width="300px"
 />
 					<div class="american_dream">
-						<a href="./">PHOTODAIRY</a>
+						<a class="gallery-link" href="./">PHOTODAIRY</a>
 						<h3>American dream</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
 					</div>
@@ -71,7 +74,7 @@
 					width="300px"
 />
 					<div class="song_for_sunning">
-						<a href="./">LIFESTYLE</a>
+						<a class="gallery-link" href="./">LIFESTYLE</a>
 						<h3>Top 10 song for running</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
 					</div>
@@ -83,7 +86,7 @@
 					width="300px"
 />
 					<div class="song_for_sunning">
-						<a href="./">LIFESTYLE</a>
+						<a class="gallery-link" href="./">LIFESTYLE</a>
 						<h3>Life tastes better with coffee</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
 					</div>
@@ -95,7 +98,7 @@
 					width="300px"
 />
 					<div class="song_for_sunning">
-						<a href="./">PHOTODAIRY</a>
+						<a class="gallery-link" href="./">PHOTODAIRY</a>
 						<h3>A day exploring the Alps</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
 					</div>
@@ -107,14 +110,14 @@
 					width="300px"
 />
 					<div class="song_for_sunning">
-						<a href="./">LIFESTYLE</a>
+						<a class="gallery-link" href="./">LIFESTYLE</a>
 						<h3>Cold winter days</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
 					</div>
 				</li>
 			</ul>
 		</section>
-		<button>Load more</button>
+		<button class="gallery-button">Load more</button>
 	</main>
 	
 </body>
