--- a/index.html
+++ b/index.html
@@ -11,111 +11,115 @@
 </head>
 <body>
 	<header class="header">
-		<a class="header-link" href="./">
-			<img 
-					class="header-link-img"
-					src="https://img.icons8.com/officel/40/stack-of-photos.png" 
-					alt="Logo Photoblog" 
-					width="40" 
-			/>
-			<br/>
-					Photoblog.dev
-	</a>
-		<nav class="header-nav">
-			<ul class="header-nav-list">
-				<li class="header-nav-list-item">
-					<a class="header-nav-list-item-link" href="./">LIFESTYLE</a>
-				</li>
-				<li class="header-nav-list-item">
-					<a class="header-nav-list-item-link" href="./">PHOTODIARY</a>
-				</li>
-				<li class="header-nav-list-item">
-					<a class="header-nav-list-item-link" href="./">MUSIC</a>
-				</li>
-				<li class="header-nav-list-item">
-					<a class="header-nav-list-item-link" href="./">TRAVEL</a>
-				</li>
-			</ul>
-		</nav>
+		<div class="container">
+			<a class="header-link" href="./">
+				<img 
+						class="header-link-img"
+						src="https://img.icons8.com/officel/40/stack-of-photos.png" 
+						alt="Logo Photoblog" 
+						width="40" 
+				/>
+				<br/>
+						Photoblog.dev
+		</a>
+			<nav class="header-nav">
+				<ul class="header-nav-list">
+					<li class="header-nav-list-item">
+						<a class="header-nav-list-item-link" href="./">LIFESTYLE</a>
+					</li>
+					<li class="header-nav-list-item">
+						<a class="header-nav-list-item-link" href="./">PHOTODIARY</a>
+					</li>
+					<li class="header-nav-list-item">
+						<a class="header-nav-list-item-link" href="./">MUSIC</a>
+					</li>
+					<li class="header-nav-list-item">
+						<a class="header-nav-list-item-link" href="./">TRAVEL</a>
+					</li>
+				</ul>
+			</nav>
+		</div>
 	</header>
 	
 	<main>
 		<section class="section-galary">
-			<h2 class="gallery-title">Photoblog</h2>
-			<ul class="gallery-list">
-				<li class="gallery-item">
-					<img 
-					class="gallery-image"
-					src="image/music_festival.jpg" 
-					alt="More than just a music festival "
-					width="300px"/>
-					<div class="music_festival">
-						<a class="gallery-link" href="./">LIFESTYLE</a>
-						<h3 class="gallery-list-title">More than just a music festival</h3>
-						<p class="gallery-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-					</div>
-				</li>
-				<li>
-					<img 
-					src="image/american_dream.jpg" 
-					alt="American Dream"
-					width="300px"
-/>
-					<div class="american_dream">
-						<a class="gallery-link" href="./">PHOTODAIRY</a>
-						<h3>American dream</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-					</div>
-				</li>
-				<li>
-					<img 
-					src="image/song_for_running.jpg" 
-					alt="Song For Sunning"
-					width="300px"
-/>
-					<div class="song_for_sunning">
-						<a class="gallery-link" href="./">LIFESTYLE</a>
-						<h3>Top 10 song for running</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-					</div>
-				</li>
-				<li>
-					<img 
-					src="image/best_with_coffe.jpg" 
-					alt="Life tastes better with coffee"
-					width="300px"
-/>
-					<div class="song_for_sunning">
-						<a class="gallery-link" href="./">LIFESTYLE</a>
-						<h3>Life tastes better with coffee</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-					</div>
-				</li>
-				<li>
-					<img 
-					src="image/exploring_the_alps.jpg" 
-					alt="A day exploring the Alps"
-					width="300px"
-/>
-					<div class="song_for_sunning">
-						<a class="gallery-link" href="./">PHOTODAIRY</a>
-						<h3>A day exploring the Alps</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-					</div>
-				</li>
-				<li>
-					<img 
-					src="image/cold_winter_days.jpg" 
-					alt="Cold winter days"
-					width="300px"
-/>
-					<div class="song_for_sunning">
-						<a class="gallery-link" href="./">LIFESTYLE</a>
-						<h3>Cold winter days</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
-					</div>
-				</li>
-			</ul>
+			<div class="container">
+				<h2 class="gallery-title">Photoblog</h2>
+				<ul class="gallery-list">
+					<li class="gallery-item">
+						<img 
+						class="gallery-image"
+						src="image/music_festival.jpg" 
+						alt="More than just a music festival "
+						width="300px"/>
+						<div class="music_festival">
+							<a class="gallery-link" href="./">LIFESTYLE</a>
+							<h3 class="gallery-list-title">More than just a music festival</h3>
+							<p class="gallery-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+						</div>
+					</li>
+					<li>
+						<img 
+						src="image/american_dream.jpg" 
+						alt="American Dream"
+						width="300px"
+	/>
+						<div class="american_dream">
+							<a class="gallery-link" href="./">PHOTODAIRY</a>
+							<h3>American dream</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+						</div>
+					</li>
+					<li>
+						<img 
+						src="image/song_for_running.jpg" 
+						alt="Song For Sunning"
+						width="300px"
+	/>
+						<div class="song_for_sunning">
+							<a class="gallery-link" href="./">LIFESTYLE</a>
+							<h3>Top 10 song for running</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+						</div>
+					</li>
+					<li>
+						<img 
+						src="image/best_with_coffe.jpg" 
+						alt="Life tastes better with coffee"
+						width="300px"
+	/>
+						<div class="song_for_sunning">
+							<a class="gallery-link" href="./">LIFESTYLE</a>
+							<h3>Life tastes better with coffee</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+						</div>
+					</li>
+					<li>
+						<img 
+						src="image/exploring_the_alps.jpg" 
+						alt="A day exploring the Alps"
+						width="300px"
+	/>
+						<div class="song_for_sunning">
+							<a class="gallery-link" href="./">PHOTODAIRY</a>
+							<h3>A day exploring the Alps</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+						</div>
+					</li>
+					<li>
+						<img 
+						src="image/cold_winter_days.jpg" 
+						alt="Cold winter days"
+						width="300px"
+	/>
+						<div class="song_for_sunning">
+							<a class="gallery-link" href="./">LIFESTYLE</a>
+							<h3>Cold winter days</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+						</div>
+					</li>
+				</ul>
+			</div>
 		</section>
 		<button class="gallery-button">Load more</button>
 	</main>
