--- a/index.html
+++ b/index.html
@@ -58,64 +58,69 @@
 							<p class="gallery-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
 						</div>
 					</li>
-					<li>
+					<li class="gallery-item">
 						<img 
+						class="gallery-image"
 						src="image/american_dream.jpg" 
 						alt="American Dream"
 						width="300px"
 	/>
 						<div class="american_dream">
 							<a class="gallery-link" href="./">PHOTODAIRY</a>
-							<h3>American dream</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+							<h3 class="gallery-list-title">American dream</h3>
+							<p class="gallery-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
 						</div>
 					</li>
-					<li>
+					<li class="gallery-item">
 						<img 
+						class="gallery-image"
 						src="image/song_for_running.jpg" 
 						alt="Song For Sunning"
 						width="300px"
 	/>
 						<div class="song_for_sunning">
 							<a class="gallery-link" href="./">LIFESTYLE</a>
-							<h3>Top 10 song for running</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+							<h3 class="gallery-list-title">Top 10 song for running</h3>
+							<p class="gallery-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
 						</div>
 					</li>
-					<li>
+					<li class="gallery-item">
 						<img 
+						class="gallery-image"
 						src="image/best_with_coffe.jpg" 
 						alt="Life tastes better with coffee"
 						width="300px"
 	/>
 						<div class="song_for_sunning">
 							<a class="gallery-link" href="./">LIFESTYLE</a>
-							<h3>Life tastes better with coffee</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+							<h3 class="gallery-list-title">Life tastes better with coffee</h3>
+							<p class="gallery-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
 						</div>
 					</li>
-					<li>
+					<li class="gallery-item">
 						<img 
+						class="gallery-image"
 						src="image/exploring_the_alps.jpg" 
 						alt="A day exploring the Alps"
 						width="300px"
 	/>
 						<div class="song_for_sunning">
 							<a class="gallery-link" href="./">PHOTODAIRY</a>
-							<h3>A day exploring the Alps</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+							<h3 class="gallery-list-title">A day exploring the Alps</h3>
+							<p class="gallery-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
 						</div>
 					</li>
-					<li>
+					<li class="gallery-item">
 						<img 
+						class="gallery-image"
 						src="image/cold_winter_days.jpg" 
 						alt="Cold winter days"
 						width="300px"
 	/>
 						<div class="song_for_sunning">
 							<a class="gallery-link" href="./">LIFESTYLE</a>
-							<h3>Cold winter days</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+							<h3 class="gallery-list-title">Cold winter days</h3>
+							<p class="gallery-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
 						</div>
 					</li>
 				</ul>
